Fix GMap dumb overflow stuff

--- a/live/styles.css
+++ b/live/styles.css
@@ -34,6 +34,7 @@
 #map {
   height: 400px;
   width: 100%;
+  overflow: auto !important;
 }
 table {
   width: 100%;
